resolved the overlapping of the invisible navbar covering the logo

--- a/style.css
+++ b/style.css
@@ -619,9 +619,10 @@ padding: 1.2rem;
         opacity: 0;
         transition: 0.3s;
         filter: blur(0.2rem);
-        
+        transform: translateY(10%);
         
     }
+
 
     #navbar-container li {
 
